--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "team-qwerty",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettify": "prettier --write *.js **/*.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,5 +19,6 @@
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.5.1",
     "sequelize": "^6.32.1"
-  }
+  },
+  "description": ""
 }
