--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettify": "prettier --write *.js **/*.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "sequelize": "^6.32.1"
   },
   "devDependencies": {
+    "prettier": "^3.0.0",
     "sequelize-cli": "^6.6.1"
   }
 }
